# practical-opencv

./: LICENSE.txt  README.md
code/src/chapter10/: CMakeLists.txt
code/src/chapter10/include/: cap.h
code/src/chapter10/src/: PiCapture.cpp  code10-1.cpp  code10-2.cpp  code10-3.cpp  code10-4.cpp
code/src/chapter11/: CMakeLists.txt  Config.h.in
code/src/chapter11/include/: Config.h
code/src/chapter11/src/: code11-1.cpp  code11-2.cpp  code11-3.cpp  code11-4.cpp  code11-4.cpp~  code11-5.cpp  code11-6.cpp
code/src/chapter2/: code2-1.cpp
code/src/chapter4/: code4-1.cpp  code4-2.cpp  code4-3.cpp  code4-4.cpp  code4-5.cpp
code/src/chapter5/: code5-1.cpp  code5-2.cpp  code5-2.cpp~  code5-3.cpp  code5-4.cpp  code5-5.cpp  code5-6.cpp  code5-7.cpp  code5-8.cpp
code/src/chapter6/: code6-1.cpp  code6-2.cpp  code6-3.cpp  code6-4.cpp  code6-4.cpp~  code6-5.cpp
code/src/chapter7/: code7-1.cpp  code7-2.cpp  code7-3.cpp  code7-4.cpp  code7-5.cpp
code/src/chapter8/: code8-1.cpp  code8-2.cpp  code8-3.cpp  code8-4.cpp
code/src/chapter8/code8-5/: CMakeLists.txt  Config.h.in
code/src/chapter8/code8-5/data/: aSVM.xml  bSVM.xml  cSVM.xml  svm.xml  vocab.xml
code/src/chapter8/code8-5/include/: Config.h
code/src/chapter8/code8-5/src/: code8-5.cpp  test.cpp
code/src/chapter9/code9-1/: CMakeLists.txt  Config.h.in
code/src/chapter9/code9-1/data/: cam_calib.xml
code/src/chapter9/code9-1/include/: Config.h
code/src/chapter9/code9-1/src/: code9-1.cpp
code/src/chapter9/stereo/: CMakeLists.txt  Config.h.in
code/src/chapter9/stereo/data/: left_cam_calib.xml  right_cam_calib.xml  stereo_calib.xml
code/src/chapter9/stereo/include/: Config.h
code/src/chapter9/stereo/src/: code9-2.cpp  code9-3.cpp  code9-4.cpp  code9-5.cpp  code9-6.cpp  code9-7.cpp
